@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-22T00:43:04Z",
+  "timestamp" : "2025-11-28T00:43:34Z",
   "count_outdated" : 283,
   "uniques_outdated" : 249,
-  "count" : 286,
-  "uniques" : 252,
+  "count" : 287,
+  "uniques" : 253,
   "clones" : [
     {
       "timestamp": "2025-11-16T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2025-11-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
