@@ -1,3 +1,12 @@
+2025-11-28T00:43:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19750877032 # 822
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 249 283 / 252 286
+* notice: next accum: outdated-unq outdated-all / unq all: 249 283 / 253 287
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-27]
+
 2025-11-22T00:43:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19587467749 # 816
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-22
